[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/Health/Misc/Frame.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Health/Misc/FrameBackground.png" type="Texture" id=2]
[ext_resource path="res://Nodes/UI/Health/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/UI/Health/HealthBox.gd" type="Script" id=4]

[node name="HealthBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="Sprite" parent="."]
position = Vector2( -8, 0 )
z_index = 1
texture = ExtResource( 1 )
offset = Vector2( 50, 20 )

[node name="FrameBackground" type="Sprite" parent="."]
position = Vector2( 42, 20 )
texture = ExtResource( 2 )

[node name="Heart1" parent="." instance=ExtResource( 3 )]
position = Vector2( 22, 19 )

[node name="Heart2" parent="." instance=ExtResource( 3 )]
position = Vector2( 41, 19 )

[node name="Heart3" parent="." instance=ExtResource( 3 )]
position = Vector2( 60, 19 )
